--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                  <a href="tarjeta debito.html">Ir al Formulario</a>
              </div>
               <div class="info-card" data-aos="zoom-in" data-aos-delay="400">
-                 <h3>Actualización Datos</h3>
-                 <p>Mantén tu información al día.</p>
+                 <h3>Crea tu cuenta</h3>
+                 <p>Empieza tu historia junto a nosotros</p>
                  <a href="informacion basica.html">Ir al Formulario</a>
              </div>
         </div>
