--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                         <li><a href="#sobre-nosotros" class="nav-link">Nosotros</a></li>
                         <li><a href="#formularios" class="nav-link">Solicitudes</a></li>
                         <li><a href="#politicas" class="nav-link">Políticas</a></li>
-                         <li class="login-button-mobile-li"><a href="#" class="login-button mobile-only">Banca en Línea</a></li>
+                         <li class="login-button-mobile-li"><a href="banca-en-linea.html" class="login-button mobile-only">Banca en Línea</a></li>
                     </ul>
                 </div>
             </nav>
-            <button class="login-button desktop-only">Banca en Línea</button>
+            <a href="banca-en-linea.html" class="login-button desktop-only">Banca en Línea</a>
         </div>
     </header>
 
@@ -220,7 +220,7 @@
                  <div class="info-card" data-aos="zoom-in" data-aos-delay="200">
                      <h3>Crédito Personal Rápido</h3>
                      <p>Obtén el financiamiento que necesitas de forma ágil.</p>
-                     <a href="#">Más Detalles</a>
+                     <a href="creditos.html">Más Detalles</a>
                  </div>
                  <div class="info-card" data-aos="zoom-in" data-aos-delay="300">
                      <h3>Inversiones Inteligentes</h3>
@@ -230,7 +230,7 @@
                   <div class="info-card" data-aos="zoom-in" data-aos-delay="400">
                      <h3>Seguros BankCloud</h3>
                      <p>Protege lo que más importa con nuestros seguros.</p>
-                     <a href="#">Ver Seguros</a>
+                     <a href="seguros.html">Ver Seguros</a>
                  </div>
             </div>
         </div>
@@ -254,6 +254,11 @@
                  <h3>Crea tu cuenta</h3>
                  <p>Empieza tu historia junto a nosotros</p>
                  <a href="informacion basica.html">Ir al Formulario</a>
+             </div>
+             <div class="info-card" data-aos="zoom-in" data-aos-delay="500">
+                 <h3>Crea cuenta para menor</h3>
+                 <p>Abre una cuenta para menores con beneficios exclusivos.</p>
+                 <a href="cuenta-menor.html">Ir al Formulario</a>
              </div>
         </div>
      </section>
