--- a/equipo.html
+++ b/equipo.html
@@ -204,7 +204,9 @@
                     </ul>
                 </div>
             </nav>
-            <button class="login-button desktop-only">Banca en Línea</button>
+        </nav>
+        <a href="banca-en-linea.html" class="login-button desktop-only">Banca en Línea</a>
+    </div>
         </div>
     </header>
 
