--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                  <div class="info-card" data-aos="zoom-in" data-aos-delay="300">
                      <h3>Inversiones Inteligentes</h3>
                      <p>Haz crecer tu dinero con nuestras opciones de inversión.</p>
-                     <a href="#">Explorar Opciones</a>
+                     <a href="inversiones.html">Explorar Opciones</a>
                  </div>
                   <div class="info-card" data-aos="zoom-in" data-aos-delay="400">
                      <h3>Seguros BankCloud</h3>
