--- a/inversiones.html
+++ b/inversiones.html
@@ -122,8 +122,6 @@
              .footer-button { align-self: flex-start; }
          }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 </head>
 <body>
 
@@ -152,94 +150,42 @@
             </nav>
         </nav>
         <a href="banca-en-linea.html" class="login-button desktop-only">Banca en Línea</a>
-    </div>>
+    </div>
         </div>
     </header>
 
     <div class="main-container">
-        <h1 data-aos="fade-down" data-aos-duration="1000">Servicios de Seguros BankCloud</h1>
-        <p data-aos="fade-up" data-aos-duration="1000">En BankCloud, la protección financiera es una prioridad. Nuestros seguros están diseñados para brindar tranquilidad, estabilidad y respaldo inmediato ante situaciones imprevistas, protegiendo tanto a las personas como a su patrimonio.</p>
+        <h1 data-aos="fade-down" data-aos-duration="1000">Inversiones en BankCloud</h1>
+        <p data-aos="fade-up" data-aos-duration="1000">En BankCloud, te ofrecemos soluciones de inversión diseñadas para maximizar tus rendimientos y ayudarte a alcanzar tus metas financieras. Descubre nuestras opciones y beneficios exclusivos.</p>
 
-        <section class="document-section" data-aos="zoom-in" data-aos-duration="1000">
-            <h2>🏥 Seguro de Vida BankCloud</h2>
-            <p><strong>Definición:</strong> Es una póliza que garantiza el pago de una suma asegurada a los beneficiarios designados, en caso de fallecimiento o incapacidad total y permanente del asegurado.</p>
-            <p><strong>Destinatarios:</strong> Clientes que desean proteger financieramente a su familia o dependientes.</p>
-            <h3>Coberturas:</h3>
+        <section class="document-section" data-aos="fade-up" data-aos-duration="1000">
+            <h2>📈 Opciones de Inversión</h2>
             <ul>
-                <li>Fallecimiento por cualquier causa.</li>
-                <li>Fallecimiento accidental con cobertura adicional.</li>
-                <li>Incapacidad total y permanente.</li>
-                <li>Diagnóstico de enfermedades graves (opcional).</li>
-            </ul>
-            <h3>Beneficios:</h3>
-            <ul>
-                <li>Apoyo económico inmediato para familiares en momentos críticos.</li>
-                <li>Cubre deudas, gastos médicos o compromisos financieros pendientes.</li>
-                <li>Contratación sencilla, con requisitos mínimos.</li>
-                <li>Posibilidad de incluirlo como protección complementaria en préstamos y tarjetas.</li>
+                <li>💰 <strong>Certificados de Depósito (CD):</strong> Rendimientos garantizados con tasas competitivas y plazos flexibles.</li>
+                <li>📊 <strong>Fondos de Inversión:</strong> Diversifica tu portafolio con acceso a mercados nacionales e internacionales.</li>
+                <li>🔒 <strong>Planes de Ahorro Programado:</strong> Ahorra de manera constante y disfruta de intereses atractivos.</li>
+                <li>🌍 <strong>Inversiones Sostenibles:</strong> Invierte en proyectos que promuevan el desarrollo sostenible.</li>
             </ul>
         </section>
 
-        <section class="document-section" data-aos="fade-right" data-aos-duration="1000">
-            <h2>🚗 Seguro de Vehículos BankCloud</h2>
-            <p><strong>Definición:</strong> Póliza de seguros que cubre los riesgos asociados a la propiedad y uso de vehículos automotores, protegiendo contra daños propios y a terceros.</p>
-            <p><strong>Destinatarios:</strong> Clientes propietarios de vehículos nuevos o usados.</p>
-            <h3>Coberturas:</h3>
+        <section class="document-section alternate-bg" data-aos="fade-up" data-aos-duration="1000">
+            <h2>🌟 Ventajas de Invertir en BankCloud</h2>
             <ul>
-                <li>Responsabilidad civil por daños a terceros.</li>
-                <li>Daños propios (colisiones, incendios, vandalismo).</li>
-                <li>Robo o hurto total o parcial.</li>
-                <li>Gastos médicos de los ocupantes.</li>
-                <li>Servicios de asistencia vehicular 24/7.</li>
-                <li>Defensa legal en caso de litigios derivados de accidentes.</li>
-            </ul>
-            <h3>Beneficios:</h3>
-            <ul>
-                <li>Amplia protección para el vehículo y su conductor.</li>
-                <li>Cobertura nacional e internacional.</li>
-                <li>Acceso a red de talleres autorizados con servicio preferencial.</li>
-                <li>Opciones de financiamiento de la prima junto al préstamo vehicular.</li>
+                <li>📈 <strong>Rendimientos Competitivos:</strong> Maximiza tus ganancias con nuestras tasas líderes en el mercado.</li>
+                <li>🔐 <strong>Seguridad Financiera:</strong> Todas nuestras inversiones están respaldadas por estrictos estándares de seguridad.</li>
+                <li>📋 <strong>Asesoría Personalizada:</strong> Nuestro equipo de expertos te ayudará a elegir las mejores opciones según tus objetivos.</li>
+                <li>⏳ <strong>Flexibilidad:</strong> Diseñamos productos que se ajustan a tus plazos y necesidades específicas.</li>
+                <li>🌍 <strong>Impacto Positivo:</strong> Contribuye al desarrollo sostenible mientras haces crecer tu dinero.</li>
             </ul>
         </section>
 
-        <section class="document-section" data-aos="fade-left" data-aos-duration="1000">
-            <h2>🏠 Seguro de Propiedad BankCloud</h2>
-            <p><strong>Definición:</strong> Es un seguro destinado a salvaguardar bienes inmuebles ante riesgos que puedan causar daños, pérdida total o parcial, ya sea en viviendas o locales comerciales.</p>
-            <p><strong>Destinatarios:</strong> Propietarios de viviendas o negocios interesados en proteger sus activos.</p>
-            <h3>Coberturas:</h3>
+        <section class="document-section" data-aos="fade-up" data-aos-duration="1000">
+            <h2>🛠️ Herramientas de Inversión</h2>
             <ul>
-                <li>Incendios, explosiones y rayos.</li>
-                <li>Robo o asalto con violencia.</li>
-                <li>Daños causados por desastres naturales (huracanes, terremotos, inundaciones).</li>
-                <li>Actos de vandalismo o daños maliciosos.</li>
-                <li>Responsabilidad civil ante daños a terceros.</li>
-            </ul>
-            <h3>Beneficios:</h3>
-            <ul>
-                <li>Protección integral del inmueble y bienes contenidos.</li>
-                <li>Planes de cobertura ajustables a las necesidades del cliente.</li>
-                <li>Facilidad de financiamiento de la prima junto a productos hipotecarios.</li>
-                <li>Acceso a indemnizaciones rápidas y justas ante siniestros.</li>
-            </ul>
-        </section>
-
-        <section class="document-section" data-aos="zoom-in-up" data-aos-duration="1000">
-            <h2>📄 Seguro de Tarjetas BankCloud</h2>
-            <p><strong>Definición:</strong> Cobertura diseñada para proteger las transacciones y fondos del cliente asociados a sus tarjetas de débito o crédito BankCloud.</p>
-            <p><strong>Destinatarios:</strong> Titulares de tarjetas emitidas por BankCloud que deseen protegerse contra fraudes o pérdidas.</p>
-            <h3>Coberturas:</h3>
-            <ul>
-                <li>Uso fraudulento por robo, extravío o clonación de tarjetas.</li>
-                <li>Cargos no reconocidos o no autorizados.</li>
-                <li>Protección de compras: cobertura contra daños accidentales o robo de bienes comprados con la tarjeta.</li>
-                <li>Reembolso de fondos afectados por actividades ilícitas.</li>
-            </ul>
-            <h3>Beneficios:</h3>
-            <ul>
-                <li>Seguridad adicional en todas las transacciones locales e internacionales.</li>
-                <li>Detección y bloqueo inmediato de operaciones sospechosas.</li>
-                <li>Atención y soporte especializado para reclamos de fraudes.</li>
-                <li>Activación automática al momento de la entrega de la tarjeta.</li>
+                <li>📊 <strong>Simuladores de Inversión:</strong> Calcula tus posibles rendimientos y elige el producto ideal.</li>
+                <li>📱 <strong>Gestión en Línea:</strong> Administra tus inversiones desde nuestra plataforma digital, disponible 24/7.</li>
+                <li>📈 <strong>Reportes Detallados:</strong> Recibe informes periódicos sobre el desempeño de tus inversiones.</li>
+                <li>🔔 <strong>Alertas Personalizadas:</strong> Mantente informado sobre oportunidades y cambios en el mercado.</li>
             </ul>
         </section>
     </div>
@@ -299,8 +245,6 @@
       navLinks.forEach(link => {
           link.addEventListener('click', () => { /* ignore */ });
       });
-
-      AOS.init();
     </script>
 
 </body>
