--- a/index.html
+++ b/index.html
@@ -483,5 +483,8 @@
       window.dispatchEvent(new Event('scroll'));
 
     </script>
+
+     <!-- Tidio Chatbot Script -->
+    <script src="//code.tidio.co/jnyy5waba9izxssyckqwugntuxkv9u15.js" async></script>
 </body>
 </html>
